# plinio-eight-queens

./: Cargo.toml  README.md
assets/: theme.css
src/: main.rs  queens_solver.rs  templates.rs
templates/: template.html
